--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,6 @@ header{
 
 .nav-link{
     color: rgba(0, 0, 0, 1);
-    font-family: Inter;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
@@ -57,4 +56,22 @@ header{
     height: 48px;
     border-radius: 8px;
     background: rgba(85, 59, 51, 1);
+}
+
+.welcome-section{
+    background: rgba(255, 255, 255, 1);
+}
+
+
+.welcome-heading{
+    font-size: 72px;
+    font-weight: 800;
+    line-height: 87px;
+    letter-spacing: -1%;
+    text-align: left;
+}
+
+.welcome-section__main{
+    padding-top: 160px;
+    padding-left: 142px;
 }
