--- a/src/style.css
+++ b/src/style.css
@@ -1,169 +1,167 @@
-body{
-    font-family: "Inter", sans-serif; 
+body {
+  font-family: "Inter", sans-serif;
 }
 
-
-header{
-    padding: 46px 100px;
-    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.02);
-    background: rgba(255, 255, 255, 1);
+header {
+  padding: 46px 100px;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.02);
+  background: rgba(255, 255, 255, 1);
 }
 
-.header__wrapper{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.dekoor-icon{
-    display: flex;
-    align-items: center;
-    gap: 12.7px;
+.dekoor-icon {
+  display: flex;
+  align-items: center;
+  gap: 12.7px;
 }
 
-.dekoor-icon-text{
-    font-size: 30px;
-    color: rgba(47, 36, 31, 1);
-    font-weight: 800;
+.dekoor-icon-text {
+  font-size: 30px;
+  color: rgba(47, 36, 31, 1);
+  font-weight: 800;
 }
 
-.nav-list{
-    display: flex;
-    gap: 64px;
+.nav-list {
+  display: flex;
+  gap: 64px;
 }
 
-.nav-link{
-    color: rgba(0, 0, 0, 1);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: -1%;
-    text-align: left;
+.nav-link {
+  color: rgba(0, 0, 0, 1);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -1%;
+  text-align: left;
 }
 
-.header-btns{
-    display: flex;
-    gap: 16px;
+.header-btns {
+  display: flex;
+  gap: 16px;
 }
 
-.sign-in_btn{
-    width: 107px;
-    height: 48px;
-    border-radius: 8px;
-    background: rgba(229, 240, 182, 1);
+.sign-in_btn {
+  width: 107px;
+  height: 48px;
+  border-radius: 8px;
+  background: rgba(229, 240, 182, 1);
 }
 
-.cart-btn{
-    width: 48px;
-    height: 48px;
-    border-radius: 8px;
-    background: rgba(85, 59, 51, 1);
+.cart-btn {
+  width: 48px;
+  height: 48px;
+  border-radius: 8px;
+  background: rgba(85, 59, 51, 1);
 }
 
-
-
-.welcome-heading{
-    font-size: 72px;
-    font-weight: 800;
-    line-height: 87px;
-    letter-spacing: -1%;
-    text-align: left;
+.welcome-heading {
+  font-size: 72px;
+  font-weight: 800;
+  line-height: 87px;
+  letter-spacing: -1%;
+  text-align: left;
 }
 
-.welcome-section__main{
-    padding-top: 160px;
-    padding-left: 142px;
+.welcome-section__main {
+  padding-top: 160px;
+  padding-left: 142px;
 }
 
-.search-btns{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 48px;
-    gap: 24px;
+.search-btns {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 48px;
+  gap: 24px;
 }
 
-.search-catalog_btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    width: 344px;
-    height: 80px;
-    border-radius: 12px;
-    background: rgba(229, 240, 182, 1);
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    color: rgba(85, 59, 51, 1);
+.search-catalog_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  width: 344px;
+  height: 80px;
+  border-radius: 12px;
+  background: rgba(229, 240, 182, 1);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  color: rgba(85, 59, 51, 1);
+  text-transform: uppercase;
 }
 
-.watch-video_btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 16px;
-    width: 344px;
-    height: 80px;
-    box-sizing: border-box;
-    border: 1px solid rgba(85, 59, 51, 1);
-    border-radius: 12px;
-    color: rgba(85, 59, 51, 1);
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
+.watch-video_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  width: 344px;
+  height: 80px;
+  box-sizing: border-box;
+  border: 1px solid rgba(85, 59, 51, 1);
+  border-radius: 12px;
+  color: rgba(85, 59, 51, 1);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  text-transform: uppercase;
 }
 
-.welcome-section__wrapper{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.welcome-section__wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.welcome-section__product{
-    width: 522px;
-    height: 709px;
-    background-image: url(../images/sofa.png);
-    position: relative;
+.welcome-section__product {
+  width: 522px;
+  height: 709px;
+  background-image: url(../images/sofa.png);
+  position: relative;
 }
 
-.sofa-price{
-    margin-top: 413px;
-    margin-left: 48px;
-    width: 93px;
-    height: 52px;
-    padding: 8px 16px 8px 16px;
-    border-radius: 12px;
-    background: rgba(255, 255, 255, 0.5);
-    color: rgba(47, 36, 31, 1);
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
+.sofa-price {
+  margin-top: 413px;
+  margin-left: 48px;
+  width: 93px;
+  height: 52px;
+  padding: 8px 16px 8px 16px;
+  border-radius: 12px;
+  background: rgba(255, 255, 255, 0.5);
+  color: rgba(47, 36, 31, 1);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
 }
 
-.sofa-name{
-    color: rgba(255, 255, 255, 1);
-    font-size: 64px;
-    font-weight: 400;
-    line-height: 77px;
-    margin-left: 48px;
-    margin-top: 8px;
+.sofa-name {
+  color: rgba(255, 255, 255, 1);
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 77px;
+  margin-left: 48px;
+  margin-top: 8px;
 }
 
-.view-details-btn{
-    width: 197px;
-    height: 56px;
-    border-radius: 12px;
-    background: rgba(47, 36, 31, 1);
-    color: rgba(255, 255, 255, 1);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    margin-left: 48px;
-    margin-top: 16px;
+.view-details-btn {
+  width: 197px;
+  height: 56px;
+  border-radius: 12px;
+  background: rgba(47, 36, 31, 1);
+  color: rgba(255, 255, 255, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-left: 48px;
+  margin-top: 16px;
+  text-transform: uppercase;
 }
 
-.view-details-btn img{
-    margin-left: 16px;
+.view-details-btn img {
+  margin-left: 16px;
 }
-
-
