--- a/src/style.css
+++ b/src/style.css
@@ -165,3 +165,9 @@ header {
 .view-details-btn img {
   margin-left: 16px;
 }
+
+.why-choose{
+  width: 100%;
+  height: 486px;
+  background-color: rgba(47, 36, 31, 1);
+}
