--- a/src/style.css
+++ b/src/style.css
@@ -29,15 +29,17 @@ header {
 .nav-list {
   display: flex;
   gap: 64px;
-}
 
-.nav-link {
+
+a {
   color: rgba(0, 0, 0, 1);
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: -1%;
   text-align: left;
+}
+
 }
 
 .header-btns {
@@ -204,6 +206,13 @@ header {
   display: flex;
   align-items: center;
   gap: 16px;
+
+  .white-magnifier-icon, .bag-icon{
+  padding: 8px;
+  border-radius: 8px;
+  background: rgba(229, 240, 182, 0.5);
+}
+
 }
 
 .achievement-text{
@@ -215,11 +224,7 @@ header {
   text-transform: uppercase;
 }
 
-.white-magnifier-icon, .bag-icon{
-  padding: 8px;
-  border-radius: 8px;
-  background: rgba(229, 240, 182, 0.5);
-}
+
 .five-icon{
   padding: 3px 13px;
   border-radius: 8px;
@@ -243,23 +248,29 @@ header {
   align-items: center;
 }
 
-.number-of-partners{
-  color: rgba(47, 36, 31, 1);
-  font-family: Inter;
-  font-size: 96px;
-  font-weight: 700;
-  line-height: 116px;
-  letter-spacing: -5%;
-  text-align: left;
-}
+.number-of-partners_wrapper{
+  .number-of-partners{
+    color: rgba(47, 36, 31, 1);
+    font-family: Inter;
+    font-size: 96px;
+    font-weight: 700;
+    line-height: 116px;
+    letter-spacing: -5%;
+    text-align: left;
+  }
 
-.partnered-brands{
+  .partnered-brands{
   color: rgba(47, 36, 31, 1);
   font-size: 24px;
   font-weight: 400;
   line-height: 29px;
   text-transform: uppercase;
 }
+}
+
+
+
+
 
 .brands{
   display: flex;
