--- a/src/style.css
+++ b/src/style.css
@@ -238,7 +238,9 @@ a {
 }
 
 .our-partners{
-  margin-top: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background: rgba(252, 250, 250, 1);
 }
 
 .our-partners_wrapper{
@@ -276,4 +278,86 @@ a {
   display: flex;
   align-items: center;
   gap: 88px;
+}
+
+.categories{
+  padding-top: 80px;
+}
+
+
+.categories__wrapper{
+  display: flex;
+  padding-top: 80px;
+}
+
+.categories_images img{
+  margin-right: 24px;
+}
+
+.categories_heading{
+  color: rgba(47, 36, 31, 1);
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: -1%;
+  margin-left: 48px;
+}
+
+.categories_subtitle{
+  margin-left: 48px;
+  margin-top: 32px;
+  color: rgba(47, 36, 31, 1);
+  font-style: Bold;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: -1%;
+}
+
+.main-categories-list{
+  margin-top: 32px;
+}
+
+.categories_item_wrapper{
+  margin-left: 48px;
+  width: 433px;
+  height: 62px;
+  background: rgba(252, 250, 250, 1);
+  transition: 1.1s ease, background-color 0.5s ease;
+}
+
+.category-name{
+  color: rgba(0, 0, 0, 1);
+  font-style: Bold;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -1%;
+  padding-top: 20px;
+  padding-left: 16px;
+}
+
+.category-title{
+  color: rgba(0, 0, 0, 1);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0%;
+  padding-top: 12px;
+  padding-left: 16px;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+
+.categories_item_wrapper:hover {
+  width: 433px;
+  height: 121px;
+  background: rgba(229, 240, 182, 1);
+}
+
+/* Показываем текст при наведении */
+.categories_item_wrapper:hover .category-title {
+  opacity: 1;
+  transition: 3s ease;
 }
