--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,16 @@ body {
 }
 
 header {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+main {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+header {
   padding: 46px 100px;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.02);
   background: var(--second-white);
@@ -309,6 +319,8 @@ header {
 .brands {
   display: flex;
   align-items: center;
+  padding-left: 16px;
+  padding-right: 16px;
   gap: clamp(39px, 8.1vw, 88px);
 }
 
@@ -410,34 +422,26 @@ header {
   transition: 0.5s ease;
 }
 
-.categories_item_wrapper:hover {
-  width: clamp(303px, 30vw, 433px);
-  height: 121px;
-  background: var(--light-green);
-}
-
-/* Показываем текст при наведении */
-.categories_item_wrapper:hover .category-title {
-  opacity: 1;
-  transition: 3s ease;
-}
-
 .our-products {
+  position: relative;
   background: var(--brown);
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 56px;
 }
 
 .our-products-heading_wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
   padding-top: 80px;
-  padding-left: 143px;
+  
 }
 
 .our-products_heading {
   color: var(--light-green);
-  font-size: 24px;
+  font-size: clamp(16px, 1.6vw, 24px);
   font-weight: 400;
-  line-height: 36px;
   letter-spacing: -1%;
   text-align: left;
 }
@@ -445,9 +449,8 @@ header {
 .best-seller-text {
   color: var(--light-green);
   font-style: Bold;
-  font-size: 48px;
+  font-size: clamp(28px, 3.3vw, 48px);
   font-weight: 700;
-  line-height: 58px;
   letter-spacing: -1%;
   text-align: left;
 }
@@ -458,10 +461,11 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 10px 36px 10px 36px;
+  padding: 14px 36px;
   border-radius: 12px;
   background: var(--light-green);
-  margin-right: 142px;
+  transition: all 0.3s ease;
+  white-space: nowrap;
 }
 
 .best-sellers {
@@ -472,24 +476,87 @@ header {
 }
 
 .best-sellers img {
-  width: 300px;
-  height: 400px;
+  max-width: 354px;
+  max-height: 472px;
 }
 
-.orange-sofa {
+.white-chair-image {
+  position: relative;
+  border-radius: 12px;
+  width: 354px;
+  height: 472px;
+  background-image: url(../images/white-chair.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.orange-sofa-image {
+  position: relative;
+  border-radius: 12px;
   width: 354px;
   height: 472px;
   background-image: url(../images/orange-sofa.png);
   background-repeat: no-repeat;
-  position: relative;
+  background-size: cover;
 }
+
+.wooden-table-image {
+  position: relative;
+  border-radius: 12px;
+  width: 354px;
+  height: 472px;
+  background-image: url(../images/wooden-table.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.room-image {
+  position: relative;
+  border-radius: 12px;
+  width: 354px;
+  height: 472px;
+  background-image: url(../images/room.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* products price and name start*/
+
+.product-price {
+
+  position: absolute;
+  padding: 8px 16px 8px 16px;
+  border-radius: 12px;
+  background: var(--transparent-white);
+  color: var(--brown);
+  font-size: clamp(16px, 3vw, 24px);
+  font-weight: 400;
+  bottom: 100px;
+  margin-left: 24px;
+}
+
+
+
+.product-name {
+  position: absolute;
+  color: var(--second-white);
+  font-size: clamp(24px, 7vw, 48px);
+  font-weight: 400;
+  margin-left: 24px;
+  bottom: 30px;
+}
+
+
+/* products price and name end*/
+
+/* carousel-arrows start */
 
 .carousel-arrows {
   display: flex;
   gap: 36px;
   justify-content: flex-end;
   padding-right: 141px;
-  padding-bottom: 56px;
+  padding-top: 40px;
 }
 
 .carousel-arrow {
@@ -503,29 +570,10 @@ header {
   padding: 16px;
   border-radius: 62px;
   background: var(--light-green);
-}
+  border: none;
+  cursor: pointer;
 
-.orange-sofa-price {
-  width: 93px;
-  height: 52px;
-  padding: 8px 16px 8px 16px;
-  border-radius: 12px;
-  background: var(--transparent-white);
-  color: var(--brown);
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 36px;
-  margin-top: 318px;
-  margin-left: 24px;
-}
-
-.orange-sofa-name {
-  color: var(--second-white);
-  font-size: 48px;
-  font-weight: 400;
-  line-height: 58px;
-  margin-top: 8px;
-  margin-left: 24px;
+  transition: all 0.3s ease;
 }
 
 .limited-deals {
@@ -738,6 +786,18 @@ footer {
   .categories_images img {
     margin-right: 16px;
   }
+
+  .room-image {
+    display: none;
+  }
+
+  .orange-sofa-image,
+  .white-chair-image,
+  .wooden-table-image,
+  .room-image {
+    width: 354px;
+    height: 472px;
+  }
 }
 
 @media (max-width: 975px) {
@@ -752,6 +812,40 @@ footer {
   .categories_subtitle {
     max-width: 314px;
   }
+
+  .wooden-table-image{
+    display: none;
+  }
+
+.carousel-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.carousel-arrow-back {
+  left: 0;
+}
+
+.carousel-arrow-forward {
+  right: 0;
+}
+}
+
+@media (max-width: 768px) {
+  .our-products_btn {
+  width: 93px;
+  height: 40px;
+  font-size: 12px;
+  border-radius: 8px;
+  padding: 12px 16px;
+}
+
+.best-seller-text{
+  font-size: 18px;
+}
+
+
 }
 
 @media (max-width: 490px) {
@@ -803,4 +897,53 @@ footer {
   .why-choose-text {
     text-align: center;
   }
+
+  .orange-sofa-image{
+    display: none;
+  }
+
+  .our-products-heading_wrapper{
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  
+  .orange-sofa-image,
+  .white-chair-image,
+  .wooden-table-image,
+  .room-image {
+    max-width: 522px;
+    height: 396px;
+  }
+
+    .product-name {
+      bottom: 50px;
+  }
+}
+
+@media (hover: hover) {
+  .categories_item_wrapper:hover {
+    width: clamp(303px, 30vw, 433px);
+    height: 121px;
+    background: var(--light-green);
+  }
+
+  /* Показываем текст при наведении */
+  .categories_item_wrapper:hover .category-title {
+    opacity: 1;
+    transition: 3s ease;
+  }
+
+  /*hover эффект при наведении на кнопку see more*/
+  .our-products_btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(198, 214, 152, 0.3);
+  }
+
+
+  /*hover эффект при наведении на стрелки карусели*/
+
+  .carousel-arrow:hover {
+    box-shadow: 0 4px 12px rgba(198, 214, 152, 0.3);
+  }
+
 }
