--- a/src/style.css
+++ b/src/style.css
@@ -304,7 +304,7 @@ header {
     font-size: clamp(24px, 9.6vw, 96px);
     font-weight: 700;
     letter-spacing: -5%;
-    text-align: left;
+    text-align: center;
   }
 
   .partnered-brands {
@@ -319,28 +319,27 @@ header {
 .brands {
   display: flex;
   align-items: center;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-top: 30px;
   gap: clamp(39px, 8.1vw, 88px);
 }
 
 .gusto-logo {
-  width: clamp(48px, 9.2vw, 105px);
+  width: clamp(38px, 9.2vw, 105px);
   height: auto;
 }
 
 .stripe-logo {
-  width: clamp(40px, 8vw, 85px);
+  width: clamp(30px, 8vw, 85px);
   height: auto;
 }
 
 .treehouse-logo {
-  width: clamp(82px, 14.3vw, 178px);
+  width: clamp(72px, 14.3vw, 178px);
   height: auto;
 }
 
 .upwork-logo {
-  width: clamp(57px, 10.5vw, 123.5px);
+  width: clamp(47px, 10.5vw, 123.5px);
   height: auto;
 }
 
@@ -390,7 +389,7 @@ header {
 }
 
 .categories_item_wrapper {
-  width: clamp(303px, 30vw, 433px);
+  width: clamp(250px, 30vw, 433px);
   height: 62px;
   background: var(--white);
   transition:
@@ -435,7 +434,6 @@ header {
   justify-content: space-around;
   align-items: center;
   padding-top: 80px;
-  
 }
 
 .our-products_heading {
@@ -523,7 +521,6 @@ header {
 /* products price and name start*/
 
 .product-price {
-
   position: absolute;
   padding: 8px 16px 8px 16px;
   border-radius: 12px;
@@ -535,8 +532,6 @@ header {
   margin-left: 24px;
 }
 
-
-
 .product-name {
   position: absolute;
   color: var(--second-white);
@@ -545,7 +540,6 @@ header {
   margin-left: 24px;
   bottom: 30px;
 }
-
 
 /* products price and name end*/
 
@@ -580,28 +574,22 @@ header {
   background: var(--white);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 42;
-  padding: 80px 142px 80px 142px;
+  padding: clamp(32px, 5.5vw, 80px) clamp(16px, 9.9vw, 142px) ;
 }
 
 .limited-deals_heading {
   color: var(--brown);
-  font-size: 24px;
+  font-size: clamp(14px, 3.6vw, 24px);
   font-weight: 400;
-  line-height: 36px;
-  letter-spacing: 0%;
-  text-align: left;
+
 }
 
 .limited-deals_subtitle {
   max-width: 1156px;
   color: var(--brown);
   font-style: Bold;
-  font-size: 64px;
+  font-size: clamp(18px, 6.56vw, 64px);
   font-weight: 700;
-  line-height: 77px;
   margin-top: 42px;
 }
 
@@ -611,24 +599,29 @@ header {
 }
 
 .email-input {
-  width: 503px;
-  height: 80px;
+  width: clamp(206px, 34vw, 503px);
+  max-height: 80px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
   gap: 8;
-  padding: 22px 36px 22px 36px;
+  padding: clamp(16px, 2.5vw, 36px) clamp(16px, 1.5vw, 22px);
   background: var(--second-white);
   border-radius: 10px 0px 0px 10px;
 }
 
-.email-wrapper {
-  width: 80px;
-  height: 80px;
-  padding: 28px;
+.email-button-wrapper {
+  min-width: 13px;
+  min-height: 10px;
+  padding: clamp(12px, 2vw, 28px) ;
   background: var(--light-green);
   border-radius: 0px 10px 10px 0px;
+}
+
+.email-icon{
+  min-width: 20px;
+  height: auto;
 }
 
 footer {
@@ -813,39 +806,49 @@ footer {
     max-width: 314px;
   }
 
-  .wooden-table-image{
+  .wooden-table-image {
     display: none;
   }
 
-.carousel-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  .carousel-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 
-.carousel-arrow-back {
-  left: 0;
-}
+  .carousel-arrow-back {
+    left: 0;
+  }
 
-.carousel-arrow-forward {
-  right: 0;
-}
+  .carousel-arrow-forward {
+    right: 0;
+  }
+
+  .limited-deals_heading {
+    text-align: center;
+  }
+
+  .limited-deals_subtitle{
+    text-align: center;
+  }
+
+  .email-input_wrapper{
+    justify-content: center
+  }
 }
 
 @media (max-width: 768px) {
   .our-products_btn {
-  width: 93px;
-  height: 40px;
-  font-size: 12px;
-  border-radius: 8px;
-  padding: 12px 16px;
-}
+    width: 93px;
+    height: 40px;
+    font-size: 12px;
+    border-radius: 8px;
+    padding: 12px 16px;
+  }
 
-.best-seller-text{
-  font-size: 18px;
-}
-
-
+  .best-seller-text {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 490px) {
@@ -881,7 +884,7 @@ footer {
   }
 
   .brands {
-    margin-top: 24px;
+    margin-top: px;
   }
 
   .number-of-partners {
@@ -898,15 +901,15 @@ footer {
     text-align: center;
   }
 
-  .orange-sofa-image{
+  .orange-sofa-image {
     display: none;
   }
 
-  .our-products-heading_wrapper{
+  .our-products-heading_wrapper {
     padding-top: 32px;
     padding-bottom: 32px;
   }
-  
+
   .orange-sofa-image,
   .white-chair-image,
   .wooden-table-image,
@@ -915,8 +918,12 @@ footer {
     height: 396px;
   }
 
-    .product-name {
-      bottom: 50px;
+  .product-name {
+    bottom: 50px;
+  }
+
+  .limited-deals_subtitle{
+    margin-top: 16px;
   }
 }
 
@@ -939,11 +946,9 @@ footer {
     box-shadow: 0 4px 12px rgba(198, 214, 152, 0.3);
   }
 
-
   /*hover эффект при наведении на стрелки карусели*/
 
   .carousel-arrow:hover {
     box-shadow: 0 4px 12px rgba(198, 214, 152, 0.3);
   }
-
 }
